Fix issue with dark mode functionality

--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,7 @@
 
 .nav__link {
   text-decoration: none;
-  color: #181717;
+  color: var(--text-color);
   margin: auto 2rem;
   font-size: 2.1rem;
   -webkit-transition: 0.3s ease-in-out;
@@ -204,14 +204,16 @@
     left: -100%;
     top: 10rem;
     flex-direction: column;
-    background-color: #f3f3f3;
+    background-color: var(--text-color);
     width: 100%;
-    border-radius: 10px;
     text-align: center;
     -webkit-transition: 0.3s;
     transition: 0.3s;
     -webkit-box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
             box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+  }
+  .nav__link {
+    color: var(--main-white);
   }
   .nav__menu.active {
     left: 0;
